# qrcode

./: .dockerignore  .env.example  .gitignore  .~lock.output (Copy).txt#  Cargo.toml  Dockerfile  Readme.markdown  docker-compose.yml  output (Copy).txt
.github/workflows/: docker.yml
examples/: test1.rs
rs-short/: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.sample  docker-entrypoint.sh  lang.json  lists.toml
rs-short/.gitea/workflows/: release.yml
rs-short/assets/themes/dark/: base.css
rs-short/assets/themes/light/: base.css
rs-short/assets/themes/nav/: navbar-custom.css  navbar.css
rs-short/migrations/mysql/20190125012345_create_links/: up.sql
rs-short/migrations/mysql/20200407012345_add_phishing/: up.sql
rs-short/migrations/postgres/20190125012345_create_links/: up.sql
rs-short/migrations/sqlite/20190125012345_create_links/: up.sql
rs-short/migrations/sqlite/20200407012345_add_phishing/: down.sql
rs-short/src/: database.rs  db_schema.rs  error_handlers.rs  handlers.rs  init.rs  main.rs  routes.rs  spam.rs  structs.rs  templates.rs
rs-short/templates/: home.html  layout.html  phishing.html
rs-short/templates/nav/: navbar-lite.en.html  navbar-lite.fr.html
site/: .gitignore  Dockerfile  nginx.conf  package-lock.json
site/src/pages/: index.astro  style.css
site/src/script/: api.ts
src/: lib.rs  main.rs  svg.rs
